--- a/Ai2Vlt.vcxproj
+++ b/Ai2Vlt.vcxproj
@@ -319,6 +319,7 @@
     <ClInclude Include="Ai2VltPlugin.h" />
     <ClInclude Include="Ai2VltSuites.h" />
     <ClInclude Include="Ai2VltExporter.h" />
+    <ClInclude Include="Utility.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\illustratorapi\illustrator\IAIArtboards.cpp">
@@ -436,6 +437,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
       </PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Utility.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Ai2Vlt.rc" />
