add Violet submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ezxml"]
 	path = ezxml
 	url = https://github.com/rgriege/ezxml.git
+[submodule "Violet"]
+	path = violet
+	url = https://github.com/rgriege/Violet.git
